# BookTale

./: README.md  pyproject.toml
ClientApp/: package-lock.json
ClientApp/booktale/: package-lock.json  package.json
ClientApp/booktale/src/: App.js  api.js  index.css  index.js
ClientApp/booktale/src/hooks/: use-auth.js
ClientApp/booktale/src/pages/: CreateBook.jsx  HomeCss.css  HomePage.jsx  LibraryCss.css  LibraryPage.jsx  LoginCss.css  LoginPage.jsx  MyBooks.jsx  PagesCss.css  Profile.css  ProfilePage.jsx  RegisterPage.jsx  Review.css  ReviewsPage.jsx  createBook.css  searchBook.jsx
ClientApp/booktale/src/store/: index.js  slices.js
ServerApp/: .env  .gitignore  absfabric.py  alembic.ini  docker-compose.yml  main.py  requirements.txt  settings.py
ServerApp/alemb/: env.py
ServerApp/alemb/versions/: 2549b9185415_.py  3e0b55426e2e_update_list_tbl.py  69c4d5b44593_init_db.py  c6a317fab97f_update_relations.py
ServerApp/api/auth/: Security.py
ServerApp/api/dto/: BookDTO.py  ReviewDTO.py  UserDTO.py
ServerApp/api/exception/: http_exception_book.py  http_exception_user.py
ServerApp/api/routers/: auth_router.py  book_router.py  review_router.py  user_router.py
ServerApp/api/service/: BookApiService.py  ReviewApiService.py  UserApiService.py
ServerApp/database/: db.py  dec_base.py
ServerApp/database/models/: BookTable.py  ReviewTable.py  UserTable.py
ServerApp/database/repository/: BookRepository.py  ReviewRepository.py  UserRepository.py
ServerApp/other/: convert_file.py
ServerApp/other/doc/: Мрачное чудовище Бельтера_1
(+14 files in other folders)
